Moved error_print and info_print to new debug directory. Moved fifo functions to fifo directory. Wrote socket-console (both server and client) to communicate via socket.

--- a/binary/makefile
+++ b/binary/makefile
@@ -21,18 +21,26 @@ SOCKET_OBJECT_FILES := $(addprefix $(OBJECT_FOLDER)/, $(notdir $(SOCKET_SOURCE_F
 
 SOCKET_LINKER_FLAGS :=
 
+# These are the source files, object files and linker flags for the Debug files
+DEBUG_FOLDER := $(SOURCE_FOLDER)/debug
+
+DEBUG_SOURCE_FILES := $(wildcard $(DEBUG_FOLDER)/*.c)
+DEBUG_OBJECT_FILES := $(addprefix $(OBJECT_FOLDER)/, $(notdir $(DEBUG_SOURCE_FILES:.c=.o)))
+
+DEBUG_LINKER_FLAGS :=
+
 # These are rules for compiling the executable programs
-socket-client: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES)
-	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) -o $@
+socket-console: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
+	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) $(DEBUG_LINKER_FLAGS) -o $@
 
-fifo-socket-server: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(FIFO_SOURCE_FILES)
-	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) $(FIFO_LINKER_FLAGS) -o $@
+fifo-socket-server: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(FIFO_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
+	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) $(FIFO_LINKER_FLAGS) $(DEBUG_LINKER_FLAGS) -o $@
 
-fifo-console: %: $(OBJECT_FOLDER)/%.o $(FIFO_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(FIFO_SOURCE_FILES)
-	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(FIFO_OBJECT_FILES) $(FIFO_LINKER_FLAGS) -o $@
+fifo-console: %: $(OBJECT_FOLDER)/%.o $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(FIFO_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
+	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(FIFO_LINKER_FLAGS) $(DEBUG_LINKER_FLAGS) -o $@
 
-console: %: $(OBJECT_FOLDER)/%.o $(SOURCE_FOLDER)/%.c
-	$(COMPILER) $(OBJECT_FOLDER)/$@.o -o $@
+console: %: $(OBJECT_FOLDER)/%.o $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(DEBUG_SOURCE_FILES)
+	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(DEBUG_OBJECT_FILES) $(DEBUG_LINKER_FLAGS) -o $@
 
 # These are rules for compiling object files out of source files
 $(OBJECT_FOLDER)/%.o: $(SOURCE_FOLDER)/*/%.c 
