Wrote 'fifo-socket', which connects a process using named pipes with a process using sockets. Added memset 0 to buffers. Made it possible to choose pipe names and stdin/stdout open order.

--- a/binary/makefile
+++ b/binary/makefile
@@ -29,11 +29,13 @@ DEBUG_OBJECT_FILES := $(addprefix $(OBJECT_FOLDER)/, $(notdir $(DEBUG_SOURCE_FIL
 
 DEBUG_LINKER_FLAGS :=
 
+default: socket-console fifo-socket fifo-console console
+
 # These are rules for compiling the executable programs
 socket-console: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
 	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) $(DEBUG_LINKER_FLAGS) -o $@
 
-fifo-socket-server: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(FIFO_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
+fifo-socket: %: $(OBJECT_FOLDER)/%.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(SOCKET_SOURCE_FILES) $(FIFO_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
 	$(COMPILER) $(OBJECT_FOLDER)/$@.o $(SOCKET_OBJECT_FILES) $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOCKET_LINKER_FLAGS) $(FIFO_LINKER_FLAGS) $(DEBUG_LINKER_FLAGS) -o $@
 
 fifo-console: %: $(OBJECT_FOLDER)/%.o $(FIFO_OBJECT_FILES) $(DEBUG_OBJECT_FILES) $(SOURCE_FOLDER)/%.c $(FIFO_SOURCE_FILES) $(DEBUG_SOURCE_FILES)
